Fix SbtBloopSuite.sbtopts.