@@ -6,6 +6,7 @@ import scala.concurrent.Future
 
 import scala.meta.internal.builds.SbtBuildTool
 import scala.meta.internal.builds.SbtDigest
+import scala.meta.internal.io.FileIO
 import scala.meta.internal.metals.ClientCommands
 import scala.meta.internal.metals.Messages._
 import scala.meta.internal.metals.MetalsEnrichments._
@@ -306,20 +307,15 @@ class SbtBloopLspSuite
            |sbt.version=$sbtVersion
            |/build.sbt
            |scalaVersion := "${V.scala212}"
-           |libraryDependencies +=
-           |  // dependency won't resolve without the `bintray:scalacenter/releases` resolver
-           |  // that is defined in the `custom-repositories` file.
-           |  "ch.epfl.scala" %% "bloop-config" % "1.0.0-RC1+4-c5e24b66"
            |/.sbtopts
-           |-Dsbt.repository.config=custom-repositories
-           |/custom-repositories
-           |[repositories]
-           |  local
-           |  maven: https://repo1.maven.org/maven2/
-           |  scalacenter-releases: https://dl.bintray.com/scalacenter/releases
+           |-J-Xlog:gc:gc_log
            |""".stripMargin
       )
       _ = assertStatus(_.isInstalled)
+      // assert that jvm created gc log file
+      // that means that sbtopts were passed correctly
+      jvmLog = FileIO.listFiles(workspace).find(_.filename == "gc_log")
+      _ = assert(jvmLog.isDefined)
     } yield ()
   }
 
